--- a/Desafio_Criptografia/appsettings.json
+++ b/Desafio_Criptografia/appsettings.json
@@ -6,5 +6,11 @@
     "**/node_modules",
     "**/obj",
     "**/platforms"
-  ]
+  ],
+  "token": "0ac32b8ba008dd4501180cbb2b0a349709068255",
+  "filePath": "answer.json",
+  "urls": {
+    "GET": "https://api.codenation.dev/v1/challenge/dev-ps/generate-data?token=",
+    "POST": "https://api.codenation.dev/v1/challenge/dev-ps/submit-solution?token="
+  }
 }
