Adicionando arquivo answer.json e atualizando README.md

--- a/Desafio_Criptografia/appsettings.json
+++ b/Desafio_Criptografia/appsettings.json
@@ -7,7 +7,7 @@
     "**/obj",
     "**/platforms"
   ],
-  "token": "0ac32b8ba008dd4501180cbb2b0a349709068255",
+  "token": "",
   "filePath": "answer.json",
   "urls": {
     "GET": "https://api.codenation.dev/v1/challenge/dev-ps/generate-data?token=",
