--- a/Desafio_Criptografia/Desafio_Criptografia.Console.csproj
+++ b/Desafio_Criptografia/Desafio_Criptografia.Console.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="answer.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
